Resolving issue #1270, unexpected exception with simulation scripting